--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,33 @@ blessed==1.20.0
 boto3==1.34.113
 botocore==1.34.113
 braceexpand==0.1.7
+byted-cruise==0.7.3
+byted-kms-encryption==0.0.5
+byted-kmsv2inner==0.1.13
+byted-wandb==0.13.72
+byted_encrypted_hdfs==0.7.2
+bytedance-context==0.7.1
+bytedance-metrics==0.5.1
+bytedance.modelhub==0.0.67
+bytedance.servicediscovery==0.1.2
+bytedbackgrounds==0.0.6
+byteddatabus==1.0.6
+byteddps==0.1.2
+bytedenv==0.6.2
+bytedkms==3.2.9
+bytedkmsv2==0.10.44
+bytedlogger==0.15.1
+bytedmemfd==0.2
+bytedmetrics==0.9.1
+bytedpymongo==2.0.5
+bytedrh2==1.18.7a2
+bytedservicediscovery==0.17.4
+bytedtcc==1.4.2
+bytedtos==1.1.16
+bytedtrace==0.3.0
+bytedzti==1.0.11
+bytedztijwthelper==0.0.22
+bytedztispiffe==0.0.14
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
@@ -29,7 +56,7 @@ cryptacular==1.6.2
 cryptography==39.0.2
 cycler==0.12.1
 datasets
-diffusers==0.30.1
+dbus-python==1.2.16
 decorator==5.1.1
 decord==0.6.0
 deepspeed==0.14.2
@@ -62,12 +89,13 @@ greenlet==3.0.3
 grpcio==1.64.0
 h11==0.14.0
 hjson==3.1.0
-huggingface-hub==0.23.2
+huggingface-hub==0.23.1
 hupper==1.12.1
 idna==3.7
 imageio==2.34.1
 imgaug==0.2.6
 iniconfig==2.0.0
+iotop==0.6
 ipaddress==1.0.23
 ipdb==0.13.13
 ipython==8.18.1
@@ -93,6 +121,7 @@ mpmath==1.3.0
 msgpack==1.0.8
 multidict==6.0.5
 multiprocess==0.70.16
+muse==0.0.1
 natsort==8.4.0
 networkx==3.2.1
 ninja==1.11.1.1
@@ -139,6 +168,7 @@ pycurl==7.43.0.6
 pydantic==1.10.15
 pydantic_core==2.18.3
 Pygments==2.18.0
+PyGObject==3.38.0
 PyJWT==2.8.0
 pynvml==11.5.0
 pyope==0.2.2
@@ -148,6 +178,7 @@ pyquaternion==0.9.9
 pyramid==2.0.2
 pyramid-mailer==0.15.1
 pytest==6.2.5
+python-apt==2.2.1
 python-consul==1.1.0
 python-dateutil==2.9.0.post0
 python-engineio==4.9.1
@@ -206,6 +237,7 @@ triton==2.2.0
 typeguard==2.13.3
 typing_extensions==4.12.0
 tzdata==2024.1
+unattended-upgrades==0.1
 urllib3==1.26.18
 velruse==1.1.1
 venusian==3.1.0
