--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ cryptography==39.0.2
 cycler==0.12.1
 datasets
 dbus-python==1.2.16
+diffusers==0.30.1
 decorator==5.1.1
 decord==0.6.0
 deepspeed==0.14.2
