--- a/configs/showo_instruction_tuning_2_w_clip_vit.yaml
+++ b/configs/showo_instruction_tuning_2_w_clip_vit.yaml
@@ -50,7 +50,7 @@ dataset:
         external_journeydb_caption_path: "/mnt/bn/vgfm2/test_mlx/xavier/code/3062/open_muse/train_journeydb_anno.json"
         external_laion12m_caption_path: "/mnt/bn/vgfm/laion5b/laion-aesthetics-12m-captions"
         external_cc12m_caption_path: '/mnt/bn/vgfm/cc12m/captions/'
-        validation_prompts_file: "validation_prompts/text2image_prompts.txt"
+        validation_prompts_file: "validation_prompts/showoprompts.txt"
         shuffle_buffer_size: 1000
         num_workers: 32
         resolution: 256
@@ -81,14 +81,13 @@ lr_scheduler:
 
 training:
     gradient_accumulation_steps: 1
-    noise_type: "mask"
-    batch_size_t2i: 0 # org: 3
-    batch_size_lm: 0 # org: 1
-    batch_size_mmu: 1 # org: 4
+    batch_size_t2i: 3
+    batch_size_lm: 1
+    batch_size_mmu: 4
     mixed_precision: "bf16"
     enable_tf32: True
     seed: 10086
-    max_train_steps: 19600
+    max_train_steps: 100000
     overfit_one_batch: False
     cond_dropout_prob: 0.1
     min_masking_rate: 0.0
@@ -99,4 +98,3 @@ training:
     t2i_coeff: 1.0
     lm_coeff: 0.1
     mmu_coeff: 1.0
-    epochs: 10
