--- a/configs/showo_pretraining_stage2.yaml
+++ b/configs/showo_pretraining_stage2.yaml
@@ -88,7 +88,7 @@ training:
     mixed_precision: "bf16"
     enable_tf32: True
     seed: 10086
-    max_train_steps: 500000
+    max_train_steps: 1000000
     overfit_one_batch: False
     cond_dropout_prob: 0.1
     min_masking_rate: 0.0
