--- a/configs/showo_pretraining_stage3.yaml
+++ b/configs/showo_pretraining_stage3.yaml
@@ -87,7 +87,7 @@ training:
     mixed_precision: "bf16"
     enable_tf32: True
     seed: 10086
-    max_train_steps: 20000
+    max_train_steps: 50000 # to be determined according to the scale of high-quality dataset
     overfit_one_batch: False
     cond_dropout_prob: 0.1
     min_masking_rate: 0.0
