--- a/show-o2/configs/showo2_1.5b_demo_432x432_mixed_modal.yaml
+++ b/show-o2/configs/showo2_1.5b_demo_432x432_mixed_modal.yaml
@@ -11,8 +11,7 @@ experiment:
 model:
     vae_model:
         type: "wan21"
-        pretrained_model_path: "Wan_VAE_model/Wan2.1_VAE.pth"
-        #pretrained_model_path: "Wan2.1_VAE.pth"
+        pretrained_model_path: "Wan2.1_VAE.pth"
 
     showo:
         model_name: "Showo2"
