--- a/show-o2/configs/showo2_1.5b_stage_2_a_video.yaml
+++ b/show-o2/configs/showo2_1.5b_stage_2_a_video.yaml
@@ -57,7 +57,8 @@ dataset:
     params:
         train_t2i_shards_path_or_url: "path/to/your.jsonl"
         train_mmu_shards_path_or_url: "path/to/your/image/dir"
-        annotation_path: "path/to/blip_laion_cc_sbu_558k.json"
+        annotation_path: "path/to/blip_laion_cc_sbu_558k.json" # annot for mmu dataset
+        train_video_path: "path/to/your/video.jsonl"
         is_clip_encoder: False
         default_system_prompt: ""
         add_caption_prompt: True
