--- a/show-o2/configs/showo2_7b_stage_2_a.yaml
+++ b/show-o2/configs/showo2_7b_stage_2_a.yaml
@@ -1,16 +1,18 @@
 wandb:
   entity: null
+#  run_id: blvqij6q
   resume: 'auto'
 
 experiment:
-    project: "showo2-1.5b-stage-1-release"
-    name: "showo2-1.5b-stage-1-a"
-    output_dir: "show-o2-1.5b-stage-1-a"
-    output_dataloader_state_dir: "64gpus_dataloader_states"
-    max_train_examples_t2i: 66000000
-    max_train_examples_mmu: 66000000
-    save_every: 10000
-    generate_every: 1000
+    project: "showo2-7b-stage-2-release"
+    name: "showo2-7b-stage-2-a"
+    output_dir: "showo2-7b-stage-2-a"
+    output_dataloader_state_dir: "128gpus_dataloader_states"
+    max_train_examples_t2i: 100000000 # 100M
+    max_train_examples_mmu: 100000000 # 100M
+    save_every: 10000000
+    eval_every: 2500
+    generate_every: 10000000
     log_every: 50
     log_grad_norm_every: 500
     resume_from_checkpoint: 'latest'
@@ -18,15 +20,15 @@ experiment:
 model:
     vae_model:
         type: "wan21"
-        pretrained_model_path: "Wan2.1_VAE.pth"
+        pretrained_model_path: "/mnt/bn/vgfm2/test_mlx/xavier/code/0923/show-o-next-v5/Wan2.1_VAE.pth"
 
     showo:
         model_name: "Showo2"
         load_from_showo: False
         pretrained_model_path: ""
-        llm_model_path: "Qwen/Qwen2.5-1.5B-Instruct"
+        llm_model_path: "Qwen/Qwen2.5-7B-Instruct"
         llm_vocab_size: null # will be updated when setting the tokenizer in other code files
-        hidden_size: 1536
+        hidden_size: 3584
         image_latent_dim: 16
         image_latent_height: 27
         image_latent_width: 27
@@ -39,11 +41,12 @@ model:
         clip_latent_dim: 1152
         add_qk_norm: True
         add_time_embeds: True
-        frozen_params: ['image_embedder_und', 'und_trans', 'showo', 'position_embedding']
+        frozen_params: [ 'showo', 'image_embedder_und', 'und_trans', 'position_embedding', 'image_embedder_gen', 'diffusion', 'diff_proj', 'time_embed_proj']
+#        params_not_load: ['fusion_proj']
         params_not_load: null
 
     clip:
-        pretrained_model_path: "google/siglip-so400m-patch14-384"
+      pretrained_model_path: "google/siglip-so400m-patch14-384"
 
     gradient_checkpointing: True
 
@@ -53,7 +56,8 @@ dataset:
     mixed_loader_mode: "concat_max_size_cycle"
     params:
         train_t2i_shards_path_or_url: "path/to/your.jsonl"
-        train_mmu_shards_path_or_url: "path/to/your.jsonl"
+        train_mmu_shards_path_or_url: "path/to/your/image/dir"
+        annotation_path: "path/to/blip_laion_cc_sbu_558k.json"
         is_clip_encoder: False
         default_system_prompt: ""
         add_caption_prompt: True
@@ -81,13 +85,15 @@ dataset:
         hq_latent_width: ${model.showo.hq_image_latent_width}
         mixed_modal_latent_height: ${model.showo.hq_image_latent_height}
         mixed_modal_latent_width: ${model.showo.hq_image_latent_width}
-        min_res: [256, 256] # minimum image resolution
+        min_res: [512, 512]
         random_und_or_gen: 0.0
 
 optimizer:
     name: adamw
     params: # default adamw params
-        learning_rate: 0.0001
+        learning_rate_ve: 0.00005
+        learning_rate_proj: 0.00005
+        learning_rate_showo: 0.00005
         scale_lr: False # scale learning rate by total batch size
         beta1: 0.9
         beta2: 0.999
@@ -95,10 +101,10 @@ optimizer:
         epsilon: 1e-8
 
 lr_scheduler:
-    scheduler: "constant_with_warmup"
+    scheduler: "cosine"
     params:
-        learning_rate: ${optimizer.params.learning_rate}
-        warmup_steps: 2000
+        warmup_steps: null # will be calculated in the training code
+        warmup_ratio: 0.03
 
 transport:
     path_type: "Linear"
@@ -118,15 +124,17 @@ transport:
 
 training:
     gradient_accumulation_steps: 1
-    batch_size_t2i: 6
+    batch_size_t2i: 2
     batch_size_mmu: 2
     mixed_precision: "bf16"
     enable_tf32: True
     seed: 10086
-    max_train_steps: 150000
+    max_train_steps: null # will be calculated in the training code
     cond_dropout_prob: 0.1
     label_smoothing: 0.0
     max_grad_norm: 1.0
-    ntp_coeff: 0.2
+    ntp_coeff: 1.0
     flow_coeff: 1.0
+    stage: "pre-training"
+    noise_und_image: True
     und_max_t0: 1.0
