--- a/show-o2/configs/showo2_7b_demo_432x432.yaml
+++ b/show-o2/configs/showo2_7b_demo_432x432.yaml
@@ -40,7 +40,8 @@ dataset:
     preprocessing:
         max_seq_length: 1024
         resolution: 432
-        num_image_tokens: 729
+        num_t2i_image_tokens: 729
+        num_mmu_image_tokens: 729
         num_video_tokens: 3645
         latent_height: ${model.showo.image_latent_height}
         latent_width: ${model.showo.image_latent_width}
