--- a/show-o2/configs/showo2_1.5b_downstream_mixed_modality_simple.yaml
+++ b/show-o2/configs/showo2_1.5b_downstream_mixed_modality_simple.yaml
@@ -5,9 +5,9 @@ wandb:
 # 410k -- 512 res mixedmodal
 
 experiment:
-    project: "show-o2-2b-stage-1"
-    name: "show-o2-1.5b-downstream-mixed-modality-432x432"
-    output_dir: "show-o2-1.5b-downstream-mixed-modality-432x432"
+    project: "showo2-2b-stage-1"
+    name: "showo2-1.5b-downstream-mixed-modality-432x432"
+    output_dir: "showo2-1.5b-downstream-mixed-modality-432x432"
     output_dataloader_state_dir: null
     max_train_examples_t2i: 60000000 # 10M HQ generation data
     max_train_examples_mmu: null
