--- a/show-o2/configs/showo2_1.5b_stage_1_b.yaml
+++ b/show-o2/configs/showo2_1.5b_stage_1_b.yaml
@@ -5,12 +5,12 @@ wandb:
 experiment:
     project: "showo2-1.5b-stage-1-release"
     name: "showo2-1.5b-stage-1-b"
-    output_dir: "show-o2-1.5b-stage-1-b"
+    output_dir: "showo2-1.5b-stage-1-b"
     output_dataloader_state_dir: "64gpus_dataloader_states"
     max_train_examples_t2i: 10000000
     max_train_examples_mmu: 66000000
     save_every: 10000
-    generate_every: 10
+    generate_every: 1000
     log_every: 50
     log_grad_norm_every: 500
     resume_from_checkpoint: 'latest'
