--- a/show-o2/configs/showo2_1.5b_stage_1_a.yaml
+++ b/show-o2/configs/showo2_1.5b_stage_1_a.yaml
@@ -5,7 +5,7 @@ wandb:
 experiment:
     project: "showo2-1.5b-stage-1-release"
     name: "showo2-1.5b-stage-1-a"
-    output_dir: "show-o2-1.5b-stage-1-a"
+    output_dir: "showo2-1.5b-stage-1-a"
     output_dataloader_state_dir: "64gpus_dataloader_states"
     max_train_examples_t2i: 66000000
     max_train_examples_mmu: 66000000
