The .py for the download model.

--- a/show-o2/configs/showo2_1.5b_demo_432x432.yaml
+++ b/show-o2/configs/showo2_1.5b_demo_432x432.yaml
@@ -12,7 +12,7 @@ model:
     weight_type: "bfloat16"
     vae_model:
         type: "wan21"
-        pretrained_model_path: "Wan2.1_VAE.pth"
+        pretrained_model_path: "Wan_VAE_model/Wan2.1_VAE.pth"
 
     showo:
         model_name: "Showo2"
